fix(federation): fix category management for federated API (#7902)
**Issue** [APIM-5403](https://gravitee.atlassian.net/browse/APIM-5403)

## Description

[PR 7864](https://github.com/gravitee-io/gravitee-api-management/pull/7864)
we have a bug with storage of categories by key instead of ids.